// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Button /> renders with default style 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Button /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`<ButtonMain /> renders hidden 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
    class="c0 c1"
    visible="false"
  />
</DocumentFragment>
`;

exports[`<ButtonMain /> renders visible 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
    class="c0 c1"
    visible="true"
  />
</DocumentFragment>
`;

exports[`<ButtonMain /> renders with default style 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<ButtonMain /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #202124;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #fff;
  text-transform: uppercase;
}

.c1 {
  margin: auto;
  padding: 0;
  box-shadow: none;
  width: 0;
  height: 0;
  overflow: hidden;
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<ToggleSpan /> open/close 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  transition: transform 0.2s linear;
}

<span
    class="c0"
  />
</DocumentFragment>
`;

exports[`<ToggleSpan /> renders with default style - dark theme 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #fff;
  transition: transform 0.2s linear;
}

<span
    class="c0"
    open=""
  />
</DocumentFragment>
`;

exports[`<ToggleSpan /> renders with default style - light theme 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  width: 1.8rem;
  height: 0.2rem;
  margin: 0.3rem 0;
  background: #000;
  transition: transform 0.2s linear;
}

<span
    class="c0"
    open=""
  />
</DocumentFragment>
`;

exports[`renders default <ButtonAdd />' 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: 0;
}

.c1 {
  margin: 0.5rem 0 0 0;
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`renders default <ButtonIcon />' 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: 0;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders default <ButtonRemove />' 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: 0;
}

.c1 {
  display: flex;
  width: 3rem;
  height: 3rem;
  margin: -1.2rem 0 0 0;
  padding: 0;
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`renders default <ButtonTheme />' 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  display: flex;
  align-items: center;
  width: 3rem;
  height: 3rem;
  margin: 0 auto;
  background: transparent;
}

@media screen and (min-width:40rem) {
  .c1 {
    margin: 0;
  }
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`renders default <MenuToggle />' 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  background: #fff;
  border: 0;
  border-radius: 0.5rem;
  font-size: 1.2rem;
  color: #000;
  text-transform: uppercase;
}

.c1 {
  margin: 0 1rem;
  padding: 0;
  background: transparent;
  overflow: hidden;
}

@media screen and (min-width:40rem) {
  .c1 {
    display: none;
  }
}

<button
    class="c0 c1"
  />
</DocumentFragment>
`;
